# diabetic-retinopathy

./: .gitignore  Dockerfile  README.md  data.dvc  dvc.yaml  models.dvc  pyproject.toml  train_test.sh
.dvc/: config
.github/workflows/: test.yml
data/: test.csv.dvc  test_images_part.dvc  train.csv.dvc  train_images_part.dvc
src/drdetector/: __init__.py  cnn.py  config.py  datasets.py  load_chkpts.py  preproccessing.ipynb  preprocessing.py  test.py  train.py  utils.py
src/drdetector-back/: main.py
src/drdetector-front/: main.py
src/filters/: image_filters.py
