[project]
name = "drdetector"
version = "0.1"
dependencies = [
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "numpy==1.26.0",
    "matplotlib==3.6.0",
    "seaborn==0.13.0",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "dvc==3.42.0",
    "dvc-gdrive==3.0.1",
    "mlflow==2.2.2",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
drdetector = "drdetector:main"